--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/include/caCredits.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/include/caCredits.html
@@ -36,7 +36,7 @@
     </tr>
     <tr>
       <td></td>
-      <td class='ca_credit'>CHBMB<br>SpaceInvaderOne<br>Sparklyballs<br>wgstarks<br>DJoss<br>Zer0Nin3r</td>
+      <td class='ca_credit'>CHBMB<br>SpaceInvaderOne<br>Sparklyballs<br>wgstarks<br>DJoss<br>Zer0Nin3r<br>Mex<br>prostuff1<br>bonienl<br>ljm42<br>kizer<br>trurl</td>
       <td class='ca_credit'>Additional Testing</td>
     </tr>
     <tr>
