get rid of scrolling back to top.  Just jump there instead

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -1126,7 +1126,7 @@ function caChangeLog() {
 }
 
 function scrollToTop() {
-	$("html, body").animate({ scrollTop: "0px" });
+  window.scrollTo(0,0);
 }
 
 </script>
